--- a/index.html
+++ b/index.html
@@ -2,57 +2,94 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>My Web Page</title>
+<meta charset="UTF-8">
+<title>My Web Page</title>
+<link rel="icon" type="img.jpeg" href="eggs.jpeg">
 </head>
+<style>
+th,td{
+border: 1px solid;
+width: 100px;
+text-align: center;
+}
+</style>
 
 <body>
 
-    <!-- Task 2: Headings, Paragraphs, HR, BR -->
-    <h1>Welcome to My Web Page</h1>
-    <h2>This is an H2 Heading</h2>
-    <h3>This is an H3 Heading</h3>
-    <h4>This is an H4 Heading</h4>
-    <h5>This is an H5 Heading</h5>
-    <h6>This is an H6 Heading</h6>
+<!-- Task 2: Headings, Paragraphs, HR, BR -->
+<h1>Welcome to My Web Page</h1>
+<h2>This is an H2 Heading</h2>
+<h3>This is an H3 Heading</h3>
+<h4>This is an H4 Heading</h4>
+<h5>This is an H5 Heading</h5>
+<h6>This is an H6 Heading</h6>
 
-    <p>This paragraph gives you a brief intro about the page.</p>
-    <hr>
-    <p>This is a second paragraph.<br>
-        And this line starts after a line break.</p>
+<p>This paragraph gives you a brief intro about the page.</p>
+<hr>
+<p>This is a second paragraph.<br>
+And this line starts after a line break.</p>
 
-    <!-- Task 3: Lists -->
-    <h2>My Top 5 Favorite Books</h2>
-    <ol>
-        <li>The Alchemist</li>
-        <li>Atomic Habits</li>
-        <li>Sapiens</li>
-        <li>1984</li>
-        <li>Clean Code</li>
-    </ol>
+<!-- Task 3: Lists -->
+<h2>My Top 5 Favorite Books</h2>
+<ol>
+<li>HOLY QUR-AN</li>
+<li>BIOLOGY</li>
+<li>PHYSICS</li>
+<li>GEOGRAPHY</li>
+<li>MATHMATICS</li>
+</ol>
 
-    <h2>My Top 5 Hobbies</h2>
-    <ul>
-        <li>Reading</li>
-        <li>Photography</li>
-        <li>Traveling</li>
-        <li>Playing Guitar</li>
-        <li>Learning New Skills</li>
-    </ul>
+<h2>My Top 5 Hobbies</h2>
+<ul>
+<li>LEARNING</li>
+<li>PLAYING FOOTBAL</li>
+<li>SWIMMING</li>
+<li>PLAYING GAMMING</li>
+<li>LEARNING NEW THINGS</li>
+</ul>
 
-    <!-- Task 4: Images with alt text -->
-    <h2>My Favorite Images</h2>
-    <img src="https://via.placeholder.com/200" alt="Placeholder image of a nature scene" width="200">
-    <img src="https://via.placeholder.com/150" alt="Another placeholder image" width="150">
+<!-- Task 4: Images with alt text -->
+<h2>My Favorite Images</h2>
+<img src="kuku.jpeg" alt="kuku" width="200">
+<img src="eggs.jpeg" alt="eggs" width="200">
 
-    <!-- Task 5: Links -->
-    <h2>Useful Links</h2>
-    <p>
-        Visit <a href="https://www.wikipedia.org" target="_blank">Wikipedia</a><br>
-        Watch videos on <a href="https://www.youtube.com" target="_blank">YouTube</a><br>
-        Learn code at <a href="https://www.freecodecamp.org" target="_blank">freeCodeCamp</a>
-    </p>
-
+<!-- Task 5: Links -->
+<h2>Useful Links</h2>
+<p>
+Visit <a href="https://www.wikipedia.org" target="_blank">Wikipedia</a><br>
+Watch videos on <a href="https://www.youtube.com" target="_blank">YouTube</a><br>
+Learn code at <a href="https://www.freecodecamp.org" target="_blank">freeCodeCamp</a>
+</p>
+<table>
+<tr>
+<th>MONDAY</th>
+<th>TUESDAY</th>
+<th>WESDAY</th>
+<th>THURSDAY</th>
+<th>FRIDAY</th>
+</tr>
+<tr>
+<td>WEB TECH</td>
+<td></td>
+<td>IT INNOVATI</td>
+<td></td>
+<td>SECURITY</td>
+</tr>
+<tr>
+<td></td>
+<td>WEB TECH</td>
+<td>SECURITY</td>
+<td></td>
+<td>WEB TECH</td>
+</tr>
+<tr>
+<td>WEB TECH</td>
+<td>WEB TECH</td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</table>
 </body>
 
 </html>
